[build-system]
requires = ["flit_core >=3.5"]
build-backend = "flit_core.buildapi"

[project]
name = "gridgraphs"
authors = [{name = "Emir Karamehmetoglu", email = "emirkmo@github.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
requires-python = '>=3.10'
dependencies = [
    "numpy>=1.20",
]

[project.urls]
Home = "https://github.com/emirkmo/Grid-graphs-with-python"
